--- a/app/src/main/res/layout/activity_homescreen_admin.xml
+++ b/app/src/main/res/layout/activity_homescreen_admin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".homescreen_student">
+    tools:context=".homescreen_admin">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,48 +49,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingHorizontal="10dp">
-
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="10dp">
-
-                    <ImageButton
-                        android:layout_width="200dp"
-                        android:layout_height="100dp"
-                        android:layout_marginHorizontal="5dp"
-                        android:background="@drawable/card_bg"
-                        android:padding="0dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/def_event_poster" />
-
-                    <ImageButton
-                        android:layout_width="200dp"
-                        android:layout_height="100dp"
-                        android:layout_marginHorizontal="5dp"
-                        android:background="@drawable/card_bg"
-                        android:padding="0dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/def_event_poster" />
-
-                    <ImageButton
-                        android:layout_width="200dp"
-                        android:layout_height="100dp"
-                        android:layout_marginHorizontal="5dp"
-                        android:background="@drawable/card_bg"
-                        android:padding="0dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/def_event_poster" />
-
-                </LinearLayout>
-            </HorizontalScrollView>
-
-
-            <LinearLayout
+           <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_marginVertical="10dp"
@@ -102,13 +61,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="10dp"
                     android:fontFamily="@font/roboto"
-                    android:text="Recently added"
+                    android:text="Top registrations"
                     android:textColor="@color/text_color"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_home_student_ra"
+                    android:id="@+id/rv_home_admin_tr"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -125,13 +84,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="10dp"
                     android:fontFamily="@font/roboto"
-                    android:text="Personalized"
+                    android:text="Recently Added"
                     android:textColor="@color/text_color"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_home_student_pz"
+                    android:id="@+id/rv_home_admin_ra"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
