--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="text_color">#000000</color>
+    <color name="hint_color">#A4A4A4</color>
+    <color name="btn_color">#2969F3</color>
 </resources>
