--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="hint_color">#A4A4A4</color>
+    <color name="title_text_color">#000000</color>
+    <color name="text_color">#292929</color>
+    <color name="tvColor">#000000</color>
+    <color name="tile_text_color">#2969F3</color>
+    <color name="tile_color">#F0F0F0</color>
+    <color name="stroke_color">#2D2A2E</color>
+
 </resources>
